Formatierung und Logik Korrekturen